singleclick/busybox-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      restartPolicy: Always
      containers:
        - image: busybox
          name: busybox-container
          command:
            - "sh"
            - "-c"
            - "echo hello Kubernetes! >> /var/log/container.log && sleep 3600"
          ports:
            - containerPort: 80
          volumeMounts:
            - name: pvc
              mountPath: /var/log
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: pvc
