singleclick/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
    - http:
        paths:
          - path: /busybox
            pathType: Prefix
            backend:
              service:
                name: busybox-service
                port:
                  number: 80
